finish tar6,